# Practice

./: README.md
cpp/cuda/: CudaRuntime.sln
cpp/cuda/CudaRuntime/: CudaObjectBase.cuh  CudaRuntime.vcxproj  kernel.cu  learn_atomic.cu  learn_atomic.cuh  learn_cublas.cpp  learn_cublas.h  learn_idx.cu  learn_idx.cuh  learn_shared.cu  learn_shared.cuh  learn_shuffle.cu  learn_shuffle.cuh  learn_stream.cu  learn_stream.cuh  my_gemm.cu  my_gemm.cuh
cpp/cuda/CudaRuntime/tensorRT/: deploy_yolo.cpp  deploy_yolo.h  learn_plugin.cu  learn_plugin.cuh  learn_rt.cu  learn_rt.cuh  logger.h
cpp/cuda/CudaRuntime/x64/Debug/: CudaRuntime.exe.recipe  CudaRuntime.ilk  kernel.cu-1571683699.deps  kernel.cu.cache  learn.cu.cache  learn.cu443200380.deps  learn_atomic.cu-1791131436.deps  learn_atomic.cu.cache  learn_idx.cu.cache  learn_idx.cu723467864.deps  learn_rt.cu-872914362.deps  learn_rt.cu.cache  vc143.idb  (+6 more)
cpp/cv/Canny/: CMakeLists.txt
cpp/cv/Canny/src/: main.cpp
cpp/cv/Scalar/: CMakeLists.txt
cpp/cv/Scalar/src/: main.cpp
cpp/cv/dnn/: CMakeLists.txt
cpp/cv/dnn/cmake/: yaml.cmake
cpp/cv/dnn/src/: main.cpp  model_loader.cc  model_loader.h
cpp/cv/harris/: CMakeLists.txt
cpp/cv/harris/src/: main.cpp
cpp/cv/modify_pixel/: CMakeLists.txt
cpp/cv/modify_pixel/src/: main.cpp
cpp/cv/quick_demo/: CMakeLists.txt
cpp/cv/quick_demo/src/: main.cpp
cpp/cv/split&merge/: CMakeLists.txt
cpp/cv/split&merge/src/: main.cpp
py/cv-python/: corner.py  hough.py  image_splicing.py  main.py  perspective_projection.py
py/unet_model/unet_model/: dataset.py  main.py  model.py
(+11 files in other folders)
